页面优化--黑色界面/功能优化--添加提示词编辑

--- a/config.conf
+++ b/config.conf
@@ -1,9 +1,9 @@
 # AI API 配置
 BASE_URL = https://api.deepseek.com
-API_KEY = YOUR_API_KEY
+API_KEY = deepseek-api-key
 MODEL = deepseek-chat
 
 # GitHub 配置
-GITHUB_TOKEN = YOURE_TOKEN
+REPO_OWNER = TOKEN
 REPO_OWNER = yuan-junxi
 REPO_NAME = TaskEcho
